@@ -1,9 +1,11 @@
 package com.springboot.financial.scraper;
 
-import com.springboot.financial.model.Company;
-import com.springboot.financial.model.Dividend;
-import com.springboot.financial.model.ScrapedResult;
-import com.springboot.financial.model.constants.Month;
+import com.springboot.financial.constants.Month;
+import com.springboot.financial.dto.Company;
+import com.springboot.financial.dto.Dividend;
+import com.springboot.financial.dto.ScrapedResult;
+import com.springboot.financial.exception.impl.InvalidTickerException;
+import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Connection;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
@@ -17,6 +19,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 @Component
+@Slf4j
 public class YahooFinanceScraper implements Scraper {
     private static final String STATISTIC_URL = "https://finance.yahoo.com/quote/%s/history?period1=%d&period2=%d&interval=1mo";
     private static final String PROFILE_URL = "https://finance.yahoo.com/quote/%s/profile";
@@ -24,16 +27,18 @@ public class YahooFinanceScraper implements Scraper {
 
     @Override
     public ScrapedResult scrap(Company company) {
+        log.info("Scraping financial data for company: {}", company.getTicker());
         var scrapResult = new ScrapedResult();
         scrapResult.setCompany(company);
         try {
             long now = System.currentTimeMillis() / 1000;
             String url = String.format(STATISTIC_URL, company.getTicker(), START_TIME, now);
+            log.info("Connecting to URL: {}", url);
             Connection connection = Jsoup.connect(url);
             Document document = connection.get();
 
             Elements parsingDivs = document.getElementsByAttributeValue("data-test", "historical-prices");
-            Element tablesElement = parsingDivs.getFirst();
+            Element tablesElement = parsingDivs.get(0);
 
             Element tbody = tablesElement.children().get(1);
             List<Dividend> dividendList = new ArrayList<>();
@@ -52,12 +57,9 @@ public class YahooFinanceScraper implements Scraper {
                 if (month < 0) {
                     throw new RuntimeException("Unexpected Month enum value -> " + splits[0]);
                 }
-                dividendList.add(Dividend.builder()
-                        .date(LocalDateTime.of(year, month, day, 0, 0))
-                        .dividend(dividend)
-                        .build());
-
-
+                dividendList.add(
+                        new Dividend(LocalDateTime.of(year, month, day, 0, 0), dividend)
+                );
             }
             scrapResult.setDividends(dividendList);
 
@@ -66,23 +68,29 @@ public class YahooFinanceScraper implements Scraper {
             throw new RuntimeException(e);
         }
 
+        log.info("Scraping completed for company: {}", company.getTicker());
         return scrapResult;
     }
 
     @Override
     public Company scrapCompanyByTicker(String ticker) {
+        log.info("Scraping company profile for ticker: {}", ticker);
         String url = String.format(PROFILE_URL, ticker);
         try {
+            log.debug("Connecting to URL: {}", url);
             Document document = Jsoup.connect(url).get();
 
-            Elements parsingDivs = document.getElementsByAttributeValue("data-test", "qsp-profile");
-            Element titleEle = parsingDivs.getFirst().children().getFirst();
+            Elements titleElements = document.getElementsByTag("h1");
 
-            String title = titleEle.text();
-            return Company.builder()
-                    .ticker(ticker)
-                    .name(title)
-                    .build();
+            if (titleElements.isEmpty()) {
+                log.error("No company found for ticker: {}", ticker);
+                throw new InvalidTickerException();
+            }
+
+            Element titleEle = document.getElementsByTag("h1").get(0);
+            String title = titleEle.text().split("\\(")[0].trim();
+            log.info("Scraping completed for ticker: {}", ticker);
+            return new Company(ticker, title);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
